logs/products.atschemaeditorng.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/ATSchemaEditorNG'...
Listing './lib/python3.5/site-packages/Products/ATSchemaEditorNG/Extensions'...
Compiling './lib/python3.5/site-packages/Products/ATSchemaEditorNG/ParentManagedSchema.py'...
***   File "./lib/python3.5/site-packages/Products/ATSchemaEditorNG/ParentManagedSchema.py", line 58
    raise SchemaEditorError, 'Provider -- %s -- can not be recognized as Archetypes Schema Editor! Perhaps you are using ParentManagedSchema derived objects with Tool. A tool can only manage ToolManagedSchema (ParentOrToolManagedSchema) derived objects.' % str(provider).replace('<', '').replace('>','')
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/ATSchemaEditorNG/ProductsInstallHelper.py'...
***   File "./lib/python3.5/site-packages/Products/ATSchemaEditorNG/ProductsInstallHelper.py", line 49
    raise Exception, message
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/ATSchemaEditorNG/SchemaEditor.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (SchemaEditor.py, line 166)
Listing './lib/python3.5/site-packages/Products/ATSchemaEditorNG/examples'...
Listing './lib/python3.5/site-packages/Products/ATSchemaEditorNG/i18n'...
Listing './lib/python3.5/site-packages/Products/ATSchemaEditorNG/skins'...
Listing './lib/python3.5/site-packages/Products/ATSchemaEditorNG/skins/atse_templates'...
Compiling './lib/python3.5/site-packages/Products/ATSchemaEditorNG/skins/atse_templates/atse_dump_schema.py'...
***   File "./lib/python3.5/site-packages/Products/ATSchemaEditorNG/skins/atse_templates/atse_dump_schema.py", line 7
    print "#<pre>"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/ATSchemaEditorNG/skins/atse_templates/atse_field_default.py'...
***   File "./lib/python3.5/site-packages/Products/ATSchemaEditorNG/skins/atse_templates/atse_field_default.py", line 14
    """
     ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xfc in position 0: invalid start byte

Listing './lib/python3.5/site-packages/Products/ATSchemaEditorNG/tests'...
Compiling './lib/python3.5/site-packages/Products/ATSchemaEditorNG/tests/atse_testcase.py'...
***   File "./lib/python3.5/site-packages/Products/ATSchemaEditorNG/tests/atse_testcase.py", line 29
    raise Exception, 'Please set INSTALL_DEMO_TYPES = True in config.py before starting tests'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/ATSchemaEditorNG/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/ATSchemaEditorNG/tests/framework.py", line 69
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/ATSchemaEditorNG/www'...
Listing './lib/python3.5/site-packages/Products.ATSchemaEditorNG-0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
